tests/sources/invalid/match/match_missing_scrutinee.fire
// Parser error: 'match' with no scrutinee expression before the body.

fn match_missing_scrutinee() -> void {
    x: int32 = match { _ -> 1 };  //~ ERROR FS-PARSE-0012 @22
//~^ ERROR FS-PARSE-0010 @24
//~^^ ERROR FS-PARSE-0010 @24
//~^^^ ERROR FS-PARSE-0010 @24
}
